Correzzioni varie
