# PinaFront/src/app/services/models/artista-cut.ts
@@ -1,0 +1,13 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+export interface ArtistaCut {
+  cognome?: string;
+  dataDiMorte?: string;
+  dataDiNascita?: string;
+  id?: number;
+  immagine?: string;
+  luogoDiNascita?: string;
+  name?: string;
+}
